--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
-This is index file.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <nav class="container">
+            <div class="portfolio">Portfolio</div>
+            <ul>
+                <a href="#hero">
+                    <li>Home</li>
+                </a>
+                <a href="#projects">
+                    <li>Projects</li>
+                </a>
+                <a href="#contacts">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <div class="container">
+                <div class="hero_iamge">
+                    <img src="./images/hero.png" alt="hero">
+                </div>
+                <div class="hero_content">
+                    <h1>
+                        <span class="hi_text">Hi</span>, I a'm
+                        <span class="name_text">John </span>
+                    </h1>
+                    <h2>Full Stack Developer</h2>
+                </div>
+            </div>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="container">
+                <div class="project_container">
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project1.png" alt="1">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/Project2.png" alt="2">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project3.png" alt="3">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project4.png" alt="4">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project5.png" alt="5">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project6.png" alt="6">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project7.png" alt="7">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project8.png" alt="8">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                    <div class="grid_item">
+                        <div class="card">
+                            <img src="./images/project9.png" alt="9">
+                        </div>
+                        <div>
+                            <h3>Tribute Website</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contacts">
+            <div class="container">
+                <h2>Lets work together</h2>
+                <div class="top_contact">
+                    <div class="contact_way">
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                    <div class="contact_way">
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                    <div class="contact_way">
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class='footer_container'>
+            <p>This website is licensed under <a href="">@Ravikumar</a></p>
+        </div>
+    </footer>
+</body>
+</html>
